<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, MainActivity!</string>
	<string name="app_name">我的云盘</string>
    <string name="detail">详情</string>
    <string name="mydownload_series_text">第%1$d集</string>
	<string name="video_loading_text">正在加载视频...</string>
   	<string name="video_play_failed">无法播放该视频</string>
	<string name="video_play_title">视频播放失败</string>
	<string name="video_play_unsupport">目前系统不支持此种类型的视频文件格式,视频文件无法播放,请选择系统支持的格式文件播放!</string>
	<string name="confirm">确认</string>
	<string name="cancel">取消</string>
	<string name="share">分享</string>
	<string name="fav">喜爱</string>
	<string name="download">下载</string>
	<string name="other">其它</string>
	<string name="super_define">超清</string>
	<string name="hd_define">高清</string>
	<string name="sd_define">标清</string>
	<string name="playback_failed">无法播放该音乐</string>
	<string name="url_invalid">无效的播放连接</string>
	<!--  uploadfinished页面 --> 
 	<string name="upload_finished_title">上传统计</string> 
  	<string name="upload_finished_time">%1$s总共上传:</string> 
  	<string name="upload_finished_video">视频：%1$s个</string> 
  	<string name="upload_finished_audio">音频：%1$s个</string> 
  	<string name="upload_finished_pic">图片：%1$s个</string> 
  	<string name="upload_finished_text">文档：%1$s个</string> 
  	<string name="upload_finished_summarize">截止到今天使用空间%1$sGB,空间余量%2$sGB</string> 
  	<string name="upload_info_text">正在上传%1$d个， 已完成%2$d个</string>
  	<string name="all_video">全部</string>
  	<string name="verupgrade_text">版本升级:%1s版可升级</string>
  	<string name="curver_text">当前版本:%1s</string>
  	<string name="changepswok_text">修改密码成功</string>
  	<string name="changepswfailed_text">输入信息不正确</string>
  	<string name="type_movie">电影</string>
  	<string name="type_series">电视剧</string>
  	<string name="type_anima">动漫</string>
  	<string name="type_variety">综艺</string>
  	<string name="type_sports">体育</string>
  	<string name="type_news">新闻</string>
  	<string name="pswd_cannot_empty">密码不能为空!</string>
  	<string name="pswd_error">密码错误!</string>
  	<string name="pswd_setting_failed">密码设置失败!</string>
  	<string name="pswd_isnot_same">密码不一致!</string>
  	<string name="minute_text">分钟</string>
  	<string name="year_text">年</string>
  	<string name="default_folder_name">文件夹</string>
  	<string name="download_start_text">开始下载</string>
  	<string name="download_finished_text">下载完成</string>
  	<string name="download_failed_text">下载失败</string>
  	<string name="invalid_url">无效的播放连接</string>
  	<string name="pswd_input_notices">请在此输入密码</string>
  	<string name="cannotopenfile_notices">无法打开该文件</string>
  	<string name="noapptoopenthefile_notices">无默认程序打开该文件</string>
  	<string name="system_tips">友情提示</string>
  	<string name="msg_network_nowifi">无可用的网络连接，请检查你的网络设置</string>
  	<string name="net_setup">网络设置</string>
  	<string name="exit">退出</string>
  	<string name="msg_del_file">是否删除该文件</string>
  	<string name="login_error">登录失败</string>
  	<string name="online_help">在线帮助</string>
  	<string name="online_feedback">在线反馈</string>
  	<string name="space_upgrade">空间升级</string>
  	<string name="clear_cache">清空缓存</string>
  	<string name="about">关于</string>
  	<string name="version_upgrade">更新版本</string>
  	<string name="online_help_notinstall">在线帮助未安装</string>
  	<string name="online_feedback_notinstall">在线反馈未安装</string>
  	<string name="set_wallpaper_ok">设置成功！</string>
  	<string name="set_wallpaper_failed">设置失败！</string>
  	<string name="setting_wallpaper">正在设置桌面，请稍候...</string>
  	<string name="tips">提示</string>
  	<string name="space_full">您的空间容量不足,需要您前往网通营业厅办理云盘空间扩容业务,海量空间随心所用,马上行动吧!</string>
  	<string name="upload_failed">文件%1s上传失败</string>
  	<string name="upload_error">任务上传失败,下一任务正在上传!</string>
  	<string name="file_isuploaded">文件%1s已上传</string>
  	<string name="file_islimited">您上传的文件过大,请上传大小不超过2GB的文件!</string>
  	<string name="file_isbigthan2G">您上传的文件"%1s"大小超限。</string>
  	<string name="usb_removed">USB设备已移除</string>
  	<string name="upload_failed_title">上传队列中有失败任务,</string>
  	<string name="upload_failed_message">是否重新上传？</string>
  	<string name="upload_usbremoved_title">USB设备已移除</string>
  	<string name="upload_usbremoved_message">请检查后重新上传</string>
  	<string name="invalid_user_message">您还未办理该业务,请前往网通营业厅办理并开通此项业务,立即体验云端存储带来的炫酷之旅吧!</string>
  	<string name="image_download_sucess">图片下载成功！</string>  
  	<string name="search_result_text">共为您搜索到"%1d"个结果</string>
  	<string name="username_cannotempty">用户名不能为空</string>  
  	<string name="loginpswd_cannotempty">登录密码不能为空</string>
  	<string name="newpswd_cannotempty">新密码不能为空</string>  
  	<string name="newpswdagain_cannotempty">确认密码不能为空</string> 
  	<string name="pswd_notsame">两次输入密码不一致,请重新输入</string>
  	<string name="resetpswd_sucess">密码重置成功</string>
  	<string name="resetpswd_failed">密码重置失败</string>
  	
  	
    <string name="cloud_video_widget_label">云盘推荐视频</string>
    <string name="cloud_music_widget_label">云盘推荐音乐</string>
    <string name="cloud_picture_widget_label">云盘推荐图片</string>
  	
  	
</resources>