<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout 
		android:id="@+id/player_share"
		android:orientation="vertical"
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:layout_gravity="right"
	   	android:layout_marginTop="50dip"
	   	android:background="@drawable/share_bg"
	   	>
	 	<TextView
		   android:id="@+id/video_share"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:layout_marginTop="40dip"
		   android:textSize="22px"
		   android:textStyle="bold"
		   android:textColor="#ffffff"
		   android:layout_gravity="center"
		   android:gravity="center"
		   android:text="@string/share">
		</TextView>  
		<TextView
		   android:id="@+id/video_fav"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:layout_marginTop="20dip"
		   android:textSize="22px"
		   android:textStyle="bold"
		   android:textColor="#ffffff"
		   android:layout_gravity="center"
		   android:gravity="center"
		   android:text="@string/fav">
		</TextView>   
		<TextView
		   android:id="@+id/video_download"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:layout_marginTop="20dip"
		   android:textSize="22px"
		   android:textStyle="bold"
		   android:layout_gravity="center"
		   android:gravity="center"
		   android:textColor="#ffffff"
		   android:text="@string/download">
		</TextView> 
		<TextView
		   android:id="@+id/video_other"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:layout_marginTop="20dip"
		   android:textSize="22px"
		   android:textStyle="bold"
		   android:layout_gravity="center"
		   android:gravity="center"
		   android:textColor="#ffffff"
		   android:text="@string/other">
		</TextView>         
    </LinearLayout>
    
</LinearLayout>