<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout 
		android:orientation="vertical"
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:layout_marginBottom="45dip"
	   	android:background="@drawable/player_source_bg"
	   	>
	   	<LinearLayout 
			android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:gravity="center">
		   	<Button 
				android:id="@+id/video_super_sel" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:background="@drawable/player_source_sel">
			</Button>   
		 	<TextView
			   android:id="@+id/video_super"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:textSize="16px"
			   android:textStyle="bold"
			   android:textColor="#ffffff"
			   android:text="@string/super_define">
			</TextView>  
		</LinearLayout>
		<LinearLayout 
			android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:gravity="center">
		   	<Button 
				android:id="@+id/video_hd_sel" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:background="@drawable/player_source_sel">
			</Button>   
			<TextView
			   android:id="@+id/video_hd"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:textSize="16px"
			   android:textStyle="bold"
			   android:textColor="#ffffff"
			   android:text="@string/hd_define">
			</TextView>   
		</LinearLayout>
		<LinearLayout 
			android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:gravity="center">
		   	<Button 
				android:id="@+id/video_sd_sel" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:background="@drawable/player_source_sel">
			</Button>   
			<TextView
			   android:id="@+id/video_sd"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:textSize="16px"
			   android:textStyle="bold"
			   android:textColor="#ffffff"
			   android:text="@string/sd_define">
			</TextView> 
		</LinearLayout>
    </LinearLayout>
    
</LinearLayout>